# fishing-time

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: codeql-analysis.yml  macos-nightly.yml  main.yml  nightly.yml  ubuntu-nightly.yml  windows-nightly.yml
app/: CMakeLists.txt  fishing-time.cpp  test.cpp
cmake/: config.cmake
include/: aboutmenu.h  appearancesettingsmenu.h  argparser.h  coinstatisticsmenu.h  config.h  console.h  controlsmenu.h  core.h  creditsmenu.h  dictionary.h  errorwidget.h  filelog.h  game.h  gamemenu.h  inventorymenu.h  itemstatisticsmenu.h  location.h  locationmenu.h  log.h  logger.h  loginmenu.h  lotterymenu.h  mainmenu.h  mainwindow.h  marketmenu.h  menu.h  netsmenu.h  overlaywidget.h  popupinventorymenu.h  ratingmenu.h  serialization.h  settingsmenu.h  signupmenu.h  statisticsmenu.h  storemenu.h  texteditlog.h  user.h  userprofilemenu.h  usersettingsmenu.h  utils.h
resources/: resources.qrc
src/: CMakeLists.txt  aboutmenu.cpp  appearancesettingsmenu.cpp  argparser.cpp  coinstatisticsmenu.cpp  commands.cpp  config.cpp  console.cpp  controlsmenu.cpp  core.cpp  creditsmenu.cpp  dictionary.cpp  errorwidget.cpp  filelog.cpp  game.cpp  gamemenu.cpp  inventorymenu.cpp  itemstatisticsmenu.cpp  location.cpp  locationmenu.cpp  log.cpp  logger.cpp  loginmenu.cpp  lotterymenu.cpp  mainmenu.cpp  mainwindow.cpp  marketmenu.cpp  menu.cpp  netsmenu.cpp  overlaywidget.cpp  popupinventorymenu.cpp  ratingmenu.cpp  settingsmenu.cpp  signupmenu.cpp  statisticsmenu.cpp  storemenu.cpp  texteditlog.cpp  user.cpp  userinventory.cpp  userprofilemenu.cpp  (+2 more)
test/: testconfig.cpp  testconfig.h  testinventory.cpp  testinventory.h  testuser.cpp  testuser.h
